src/components/ProductCard/responsive.scss
@import "../../scss/variables.scss";

@media screen and (max-width: $laptop) {
  $columns: 3;
  .product-card {
    width: calc(calc(100% / $columns) - $marginLeft);
  }
}
@media screen and (max-width: $ipad) {
  $columns: 3;
  .product-card {
    width: calc(calc(100% / $columns) - $marginLeft);
  }
  .product-card-image {
    width: 100%;
    height: 95%;
  }
}
@media screen and (max-width: $mobile) {
  $columns: 1;
  .product-card {
    width: calc(calc(100% / $columns) - $marginLeft);
  }
}

